--- a/src/main/webapp/stylesheets/index.css
+++ b/src/main/webapp/stylesheets/index.css
@@ -162,7 +162,7 @@ a:hover {
   z-index: 2;
   margin: 0em;
   padding-top: 70px;
-  padding-bottom: 30px;
+/*  padding-bottom: 30px;*/
   background-color: #FFFFFF;
   border-bottom: 1px solid #DDDDDD;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -1572,9 +1572,13 @@ body.progress.animated .ui.progress .bar {
       Definition Container
 *******************************/
 #example .header .toolbar {
-  bottom: -30px;
+  margin-top: 20px;
   z-index: 2;
-  text-align: right;
+  text-align: center;
+}
+
+#example .header .toolbar.no-text {
+  display: none;
 }
 
 #example > .pusher > .footer {
@@ -1624,9 +1628,13 @@ body.progress.animated .ui.progress .bar {
   padding: 0.5rem 0.25rem;
 }
 
-@media only screen and (max-width : 400px) {
-  #example .advertisement {
-    max-width: 260px;
+@media only screen and (max-width : 455px) {
+  #example .header .toolbar.no-text {
+    display: block;
+  }
+    
+  #example .header .toolbar {
+    display: none;
   }
 }
 @media only screen and (max-width : 600px) {
@@ -1711,8 +1719,10 @@ body.progress.animated .ui.progress .bar {
 }
 @media only screen and (min-width : 998px) and (max-width: 1200px) {
   #example .header.segment .container {
+/*
     width: 878px;
     right: -24px;
+*/
   }
   #example .tab.header.segment .tabular.menu {
     width: 680px;
