--- a/src/main/webapp/stylesheets/dropzone.css
+++ b/src/main/webapp/stylesheets/dropzone.css
@@ -68,6 +68,12 @@
   width: 100%;
   height: 17px;
 }
+
+.dropzone .dz-preview .dz-details .icon,
+.dropzone-previews .dz-preview .dz-details .icon {
+  width: 12px;
+  padding: 2px;
+}
 .dropzone .dz-preview .dz-details img,
 .dropzone-previews .dz-preview .dz-details img {
   /* height: 350px; */
@@ -92,6 +98,11 @@
   left: 10px;
   top: 10px;
   z-index: 1;
+}
+
+.dropzone .dz-preview .dz-details .hidden,
+.dropzone-previews .dz-preview .dz-details .hidden {
+  display: none;
 }
 .dropzone .dz-preview.dz-error .dz-error-mark,
 .dropzone-previews .dz-preview.dz-error .dz-error-mark {
