--- a/src/main/webapp/stylesheets/index.css
+++ b/src/main/webapp/stylesheets/index.css
@@ -1608,7 +1608,7 @@ body.progress.animated .ui.progress .bar {
   border-left: 1px solid #DDDDDD;
   border-right: 1px solid #DDDDDD;
   border-bottom: 1px solid #DDDDDD;
-  padding: 2em 2em 7em;
+/*  padding: 2em 2em 7em;*/
   z-index: 1;
 }
 
