--- a/src/main/webapp/stylesheets/index.css
+++ b/src/main/webapp/stylesheets/index.css
@@ -180,6 +180,7 @@ a:hover {
   padding-top: 70px;
 /*  padding-bottom: 30px;*/
   background-color: #FFFFFF;
+  background-image: url('../images/pattern.png');
   border-bottom: 1px solid #DDDDDD;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
