--- a/src/main/webapp/stylesheets/dropzone.css
+++ b/src/main/webapp/stylesheets/dropzone.css
@@ -498,6 +498,7 @@
  left: 0px;
  top: 0px;
  background-color: #eee;
+ background-image: url('../images/pattern.png');
  border-radius: 6px 6px 0 0;
 }
 
